# ChangeLog for dev-java/maven
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 May 2007; kiorky <kiorky@cryptelium.net> maven-2.0.ebuild:
  rewrite launch script

  27 May 2007; kiorky <kiorky@cryptelium.net> maven-2.0.ebuild:
  Commiting as finnaly working

  26 May 2007; kiorky <kiorky@cryptelium.net> maven-2.0.ebuild,
  files/mvn-non-bin:
  install mvn script

  26 May 2007; kiorky <kiorky@cryptelium.net> maven-2.0.ebuild:
  install mvn script

  01 May 2007; kiorky <kiorky@cryptelium.net> +maven-2.0.6.ebuild,
  +metadata.xml:
  Added as a maven dependency
