@@ -1,0 +1,59 @@
+#!/bin/sh
+gjl_vm=$(gjl -v -p "maven-2")
+gjl_vm=${gjl_vm//gjl_vm=/}
+gjl_vm=${gjl_vm//\"/}
+
+if [[ -n ${gjl_vm} ]];then
+	java_cmd=$(GENTOO_VM=${gjl_vm} java-config -J)
+else
+ 	java_cmd=$(java-config -J)
+fi
+
+
+if [[ $(id -u) == "0" ]];then
+	if [[ ${1} == "fromportage" ]];then
+		# as root, use maven repo and offline mode when used in portage ebuilds
+		shift
+		"${java_cmd}" \
+		-classpath $(java-config -p classworlds-1.1) \
+		-Dclassworlds.conf=__MAVENHOME__/conf/m2_classworlds.conf \
+		-Dmaven.home=__MAVENHOME__ \
+		-Dmaven.plugin.dir=__MAVENHOME__/plugins \
+		-Dmaven.repo.remote=__MAVENHOME__/gentoo-repo \
+		-Dmaven.repo.local=__MAVENHOME__/gentoo-repo \
+		org.codehaus.classworlds.Launcher \
+		-o  ${@} # OFFLINE MODE !
+	else
+		# as root and not from portage, use local repo and online mode
+		if [[ ! -d "__MAVENROOT__" ]];then
+			mkdir -p "__MAVENROOT__" || die
+		fi
+		if [[ ! -d "__MAVENROOT__/gentoo-repo" ]];then
+			mkdir -p "__MAVENROOT__/gentoo-repo" || die
+		fi
+		if [[ ! -d "__MAVENROOT__/plugins" ]];then
+			mkdir -p "__MAVENROOT__/plugins" || die
+		fi
+		"${java_cmd}" \
+		-classpath $(java-config -p classworlds-1.1) \
+		-Dclassworlds.conf=__MAVENHOME__/conf/m2_classworlds.conf \
+		-Dmaven.home=__MAVENROOT__ \
+		-Dmaven.plugin.dir=__MAVENROOT__/plugins \
+		-Dmaven.repo.remote=__MAVENROOT__/gentoo-repo \
+		-Dmaven.repo.local=__MAVENROOT__/gentoo-repo \
+		org.codehaus.classworlds.Launcher \
+		${@}
+	fi
+else
+	# do everything as user
+	"${java_cmd}" \
+	-classpath $(java-config -p classworlds-1.1) \
+	-Dclassworlds.conf=__MAVENHOME__/conf/m2_classworlds.conf \
+	-Dmaven.home=__MAVENHOME__ \
+	-Dmaven.plugin.dir=${HOME}/plugins \
+	-Dmaven.repo.remote=${HOME}/.m2/repository \
+	-Dmaven.repo.local=${HOME}/.m2/repository  \
+	org.codehaus.classworlds.Launcher \
+	${@}
+fi
+
