@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 May 2007; kiorky <kiorky@cryptelium.net> maven-2.0.ebuild, +files/mvn:
+  reshape the maven launcher
+
   27 May 2007; kiorky <kiorky@cryptelium.net> maven-2.0.ebuild:
   rewrite launch script
 
